Revision history for Perl extension Coro.

TODO: should explore PerlIO::coroaio (perl leaks like hell).
TODO: channel->maxsize(newsize)?
TODO: __GCC_HAVE_DWARF2_CFI_ASM

	- improved Coro::State documentation a bit.
        - Coro::Debug::command now flushes the output.
        - add hack detection code for x32 abi, because the braindead slugs
          who designed that made it look exactly like x86_64 without
          providing proper compile time symbols to test for it. as a result,
          this detection cannot work reliably.
        - valgrind stack registering was broken.
        - do not rely on Time::HiRes anymore in Coro::Debug.

6.23 Fri Dec  7 23:36:37 CET 2012
        - use experimental fiber implementation on native windows
          perls.
        - use sizeof (void *) as multiplication factor for stack sizes,
          to accomodate the totally braindamaged microsoft 64 bit "os".
        - changed verifier host from win2k-ap510-32 to win7-sp516-32/64.
          activeperl 5.16 crashes when PerlIO_define_layer is called due
          to some bug in the perl dll, strawberry perl at least passes
          the testsuite.
        - implement Coro::Handle->peeraddr/host/port, for slightly
          improved compatibility with LWP.
	- implement 5.17 compatibility by almost blindly applying a
          good-looking patch by Father Chrysostomos.
        - move stack management functions into libcoro 3.
        - libcoro version 3 "released".
	- support magic values as timed_io_once args.
	- recommend AnyEvent 7+ or EV 4+, also require EV
          version 4 or newer for Coro::EV.

6.10 Tue Oct  9 01:14:27 CEST 2012
	- updated ecb.h, it had a typo that caused it to not compile on many
          big endian systems (reported by many people).
        - disable memory fences in ecb.h to improve portability.

6.09 Sat Oct  6 23:25:02 CEST 2012
	- Coro::EV I/O watchers were not interruptible by exceptions
          (Coro::State::throw) (testcase by sten).